--- a/src/html/initial_loading_page.html
+++ b/src/html/initial_loading_page.html
@@ -846,7 +846,13 @@
                 const heading = document.createElement('div');
                 heading.className = 'group-title';
                 heading.innerHTML = `
-                    <span>${domain} <small class="text-sm text-slate-500 dark:text-slate-400 ml-2">(${hosts.length})</small></span>
+                    <span class="flex items-center">
+                        <svg class="w-5 h-5 mr-2 text-slate-500 dark:text-slate-400" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="3" y="3" width="14" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
+                            <rect x="7" y="7" width="14" height="14" rx="2" stroke="currentColor" stroke-width="2" fill="none"/>
+                        </svg>
+                        ${domain} <small class="text-sm text-slate-500 dark:text-slate-400 ml-2">(${hosts.length})</small>
+                    </span>
                     <span class="icon-expand text-slate-500 dark:text-slate-400"></span>
                 `;
                 heading.addEventListener('click', () => toggleSection(section));
