[FTR] Add database icon support and expand frontend-related icon mappings on the loading page and enable Docker Hub deployment

--- a/src/html/initial_loading_page.html
+++ b/src/html/initial_loading_page.html
@@ -203,6 +203,14 @@
             content: "KFK";
         }
 
+        .icon-db {
+            background-color: #8b5cf6; /* violet-500 */
+        }
+
+        .icon-db:after {
+            content: "DB";
+        }
+
         .icon-default {
             background-color: #64748b; /* slate-500 */
         }
@@ -555,7 +563,12 @@
             // Return the appropriate icon class based on the prefix
             switch (prefix) {
                 case 'api': return 'icon-api';
-                case 'fe': return 'icon-fe';
+                case 'fe':
+                case 'frontend':
+                case 'front':
+                case 'web':
+                case 'www':
+                    return 'icon-fe';
                 case 'cdn': return 'icon-cdn';
                 case 'docs': return 'icon-docs';
                 case 'admin':
@@ -577,6 +590,16 @@
                 case 'kadeck':
                 case 'kafka':
                     return 'icon-kafka';
+                case 'adminer':
+                case 'db':
+                case 'database':
+                case 'pgadmin':
+                case 'pg':
+                case 'mysql':
+                case 'mariadb':
+                case 'mysqladmin':
+                case 'dbadmin':
+                    return 'icon-db';
                 default: return 'icon-default';
             }
         }
